Handle the text alignment so it is correctly centered given letter spacing

--- a/natours/css/style.css
+++ b/natours/css/style.css
@@ -74,6 +74,8 @@ body {
   font-size: 60px;
   font-weight: 400;
   letter-spacing: 35px;
+  padding-left: 35px;
+  text-align: center;
 }
 
 .heading-primary-sub {
@@ -81,4 +83,6 @@ body {
   font-size: 20px;
   font-weight: 700;
   letter-spacing: 17.4px;
+  padding-left: 17.4px;
+  text-align: center;
 }
